--- a/public/index.html
+++ b/public/index.html
@@ -7,29 +7,37 @@
     <link rel="stylesheet" href="style.css" />
     <title>TTS # Translation App</title>
   </head>
-  <body
-    class="bg-gray-900 flex items-center justify-center h-screen text-white"
-  >
+  <body class="bg-gray-900 flex items-center justify-center h-screen">
     <div class="bg-white shadow-md rounded-lg p-6 max-w-md w-full">
       <h1 class="text-2xl font-semibold text-center mb-4 text-gray-900">
         TTS # Translation App
       </h1>
       <textarea
-        class="w-full h-32 p-3 border-gray-300 rounded-lg focu:outline-none focus:ring-2 focus:ring-blue-500 resize-non"
+        id="textInput"
+        class="w-full h-32 p-3 border-gray-300 rounded-lg focu:outline-none focus:ring-2 focus:ring-blue-500 resize-none"
         placeholder="Type your text here..."
       ></textarea>
       <div class="mt-4">
-        <label for="voiceSelect" class="block text-sm font-medium text-gray-700 mb-2">Select Voice</label>
-        <select  id="voiceSelect" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focue:ring-3 focus:ring-blue-500">
+        <label
+          for="voiceSelect"
+          class="block text-sm font-medium text-gray-700 mb-2"
+          >Select Voice</label
+        >
+        <select
+          id="voiceSelect"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focue:ring-3 focus:ring-blue-500"
+        >
           <option value="default">Default Voices</option>
           <option value="voice1">Voice 1</option>
           <option value="voice2">Voice 2</option>
         </select>
       </div>
-      <button id="playButton"
+      <button
+        id="playButton"
         class="w-full bg-blue-500 hover:bg-blue-700 text-white font-semibold p-3 rounded-lg mt-4"
-      >Play Text
-      </div>
+      >
+        Play Text
+      </button>
     </div>
     <script src="script.js"></script>
   </body>
