--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css" />
-    <title>TTS # Translation App</title>
+    <title>Translation & TTS App</title>
   </head>
-  <body class="bg-gray-900 flex items-center justify-center h-screen">
+  <body
+    class="bg-gray-900 flex items-center justify-center h-screen text-white"
+  >
     <div class="bg-white shadow-md rounded-lg p-6 max-w-md w-full">
       <h1 class="text-2xl font-semibold text-center mb-4 text-gray-900">
-        TTS # Translation App
+        Translation & TTS
       </h1>
+
+      <!-- Input Textarea -->
       <textarea
-        id="textInput"
-        class="w-full h-32 p-3 border-gray-300 rounded-lg focu:outline-none focus:ring-2 focus:ring-blue-500 resize-none"
+        id="textArea"
+        class="w-full h-32 p-3 border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 resize-none text-gray-900"
         placeholder="Type your text here..."
       ></textarea>
+
+      <!-- Language Selection -->
+      <div class="mt-4">
+        <label
+          for="languageSelect"
+          class="block text-sm font-medium text-gray-700 mb-2"
+          >Select Language</label
+        >
+        <select
+          id="languageSelect"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+        >
+          <option value="es">Spanish</option>
+          <option value="fr">French</option>
+          <option value="de">German</option>
+          <option value="it">Italian</option>
+          <option value="hu">Hungarian</option>
+          <option value="pl">Polish</option>
+          <option value="ar">Arabic</option>
+          <option value="zh">Chinese</option>
+        </select>
+      </div>
+
+      <!-- Voice Selection -->
       <div class="mt-4">
         <label
           for="voiceSelect"
@@ -25,20 +52,21 @@
         >
         <select
           id="voiceSelect"
-          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focue:ring-3 focus:ring-blue-500"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
         >
-          <option value="default">Default Voices</option>
-          <option value="voice1">Voice 1</option>
-          <option value="voice2">Voice 2</option>
+          <option value="default">Default Voice</option>
         </select>
       </div>
+
+      <!-- Play Button -->
       <button
         id="playButton"
         class="w-full bg-blue-500 hover:bg-blue-700 text-white font-semibold p-3 rounded-lg mt-4"
       >
-        Play Text
+        Translate & Speak
       </button>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
